Fix popup containers from plyr instance not being visible

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,11 +20,9 @@
 }
 .plyr__video-wrapper {
     border-radius: 2px;
-    overflow: hidden;
 }
 .plyr {
-    border-radius: 2px; /* Adjust as needed */
-    overflow: hidden;
+    border-radius: 2px;
 }
 
 /* NOT WORKING */
